Implemented basic serialization & deserialization of ModifiersLogic class